# table-designer

./: .gitignore  main.py  pyproject.toml
scripts/: export_blueprints.py
src/table/: __init__.py  app.py  blueprints.py  obj_exporter.py  params.py  pdf_exporter.py  streamlit_app.py
src/table_designer/: blueprints.py  geometry.py  main.py  transforms.py
